--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar.png" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
+        <img src="img/avatar.jpeg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
         <p class="lead">Eu sou Pedro</p>
         <h1>Eu Aluno do EM</h1>
         <p>Estou estudando Programação pelo Alura!</p>
