--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
 <body>
     <header class="container text-center">
-        <img src="img/avatar.jpeg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
+        <img src="img/avatar.jpg" alt="avatar da Fernanda" class="rounded-circle" width="150" height="150" srcset="">
         <p class="lead">Eu sou Pedro</p>
         <h1>Eu Aluno do EM</h1>
         <p>Estou estudando Programação pelo Alura!</p>
@@ -28,7 +28,7 @@
         <div class="row">
             <div class="col-md-4">
                 <div class="card" style="width: 18rem;">
-                    <img src="pong.png" class="card-img-top" alt="...">
+                    <img src="img/pong.png" class="card-img-top" alt="...">
                     <div class="card-body">
                       <h5 class="card-title">Jogo Pong Feito no Scratch</h5>
                       <p class="card-text">Não deixe a bola cair para fora.</p>
